[package]
name = "voile"
version = "0.0.9"
authors = ["ice1000 <ice1000kotlin@foxmail.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Voile, a dependently-typed extensible programming language"
readme = "README.md"
categories = ["development-tools"]
documentation = "https://docs.rs/voile"
repository = "https://github.com/owo-lang/voile-rs"

[badges]
appveyor = { repository = "owo-lang/voile-rs", service = "github" }
circle-ci = { repository = "owo-lang/voile-rs", branch = "master" }
maintenance = { status = "experimental" }
is-it-maintained-issue-resolution = { repository = "owo-lang/voile-rs" }
is-it-maintained-open-issues = { repository = "owo-lang/voile-rs" }

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "rustdoc/katex-header.html", "--document-private-items"]

[dependencies]
pest = "2.1.1"
pest_derive = "2.1.0"
either = "1.5"
clap = { version = "2.33.0", optional = true }
structopt = { version = "0.2", optional = true }
rustyline = { version = "4.0.0", optional = true }

[features]
default = ["cli"]
cli = ["clap", "structopt", "rustyline"]

[lib]
name = "voile"
path = "src/lib.rs"

[[bin]]
name = "voilec"
path = "src/cli/mod.rs"
required-features = ["cli"]
