[package]
name = "voile"
version = "0.2.6"
authors = ["ice1000 <ice1000kotlin@foxmail.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Voile, a dependently-typed row-polymorphic programming language"
readme = ".github/README.md"
categories = ["development-tools"]
documentation = "https://docs.rs/voile"
repository = "https://github.com/owo-lang/voile-rs"

[badges]
# appveyor = { repository = "owo-lang/voile-rs", service = "github" }
# circle-ci = { repository = "owo-lang/voile-rs", branch = "master" }
maintenance = { status = "passively-maintained" }

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "rustdoc/katex-header.html", "--document-private-items"]

[dependencies]
pest = "2.1.2"
pest_derive = "2.1"
voile-util = { version = "0.2", features = ["parser", "lisp"] }
clap = { version = "2.33", optional = true }
structopt = { version = "0.3", optional = true }
rustyline = { version = "5.0", optional = true }
minitt-util = { version = "0.2.2", features = ["cli", "repl"], optional = true }

[features]
default = ["cli"]
cli = ["clap", "structopt", "rustyline", "minitt-util"]

[workspace]
members = ["voile-util"]

[lib]
name = "voile"
path = "src/lib.rs"

[[bin]]
name = "voilec"
path = "src/cli/mod.rs"
required-features = ["cli"]
