[package]
name = "voile-util"
version = "0.1.1"
authors = ["ice1000 <ice1000kotlin@foxmail.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Utilities extracted from Voile language's type-checker"
readme = "README.md"
categories = ["development-tools"]
documentation = "https://docs.rs/voile-util"
repository = "https://github.com/owo-lang/voile-rs"

[badges]
appveyor = { repository = "owo-lang/voile-rs", service = "github" }
circle-ci = { repository = "owo-lang/voile-rs", branch = "master" }
maintenance = { status = "passively-maintained" }

[dependencies]
pest = { version = "2.1.2", optional = true }

[features]
parser = ["pest"]

[package.metadata.docs.rs]
rustdoc-args = ["--document-private-items"]
